--- a/index.html
+++ b/index.html
@@ -370,17 +370,17 @@
 
   <!-- Vouch Section -->
   <section id="vouchSection" class="vouch-section hide">
-    <h2 style="margin-bottom: 20px;">Témoignages de la communauté</h2>
+    <h2 style="margin-bottom: 20px;">vouches de la communauté</h2>
     
     <div id="vouchForm" class="vouch-form hide">
-      <h3 style="margin-bottom: 15px;">Laissez votre témoignage</h3>
-      <textarea id="vouchText" placeholder="Partagez votre expérience avec NazAPI..." maxlength="500"></textarea>
+      <h3 style="margin-bottom: 15px;">Laissez votre vouch</h3>
+      <textarea id="vouchText" placeholder="Partagez votre expérience avec NazAPI..." maxlength="150"></textarea>
       <div id="vouchCharCount" class="char-count">0/500</div>
-      <button id="submitVouch" class="btn" style="margin-top: 15px;">Publier le témoignage</button>
+      <button id="submitVouch" class="btn" style="margin-top: 15px;">Publier le vouch</button>
     </div>
     
     <div id="vouchList" class="vouch-list">
-      <div class="no-vouches">Aucun témoignage pour le moment.</div>
+      <div class="no-vouches">Aucun vouch pour le moment.</div>
     </div>
   </section>
 
