--- a/test.html
+++ b/test.html
@@ -211,7 +211,7 @@
       <div style="display:flex;justify-content:space-between;align-items:center;gap:12px">
         <div>
           <div style="font-weight:700">Recherche sur le site</div>
-          <div class="muted" style="font-size:13px">Réservé aux membres Premium connectés</div>
+          <div class="muted" style="font-size:13px">Réservé aux membres Premium </div>
         </div>
         <div class="pill">Beta</div>
       </div>
