--- a/test.html
+++ b/test.html
@@ -277,6 +277,6 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-functions-compat.js"></script>
 
-<script src="create-payment-intent.js"></script>
+<script src="/api/create-payment-intent.js"></script>
 </body>
 </html>
