--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ const DISCORD = {
 // ✅ Stripe Elements config (no redirect to Stripe page)
 const STRIPE = {
   PUBLIC_KEY: 'pk_test_51Rys3a1EC7Cm7d9GpJkkTiJHhlAdD4aaRmKYvaAQownN4JmUK6R18VMB8K6RJ94iC5F6hxMarSCvv5lLc55zjlIF00wrJIQC07',
-  CREATE_PAYMENT_INTENT_URL: '/create-payment-intent' // <-- endpoint backend qui renvoie {clientSecret}
+  CREATE_PAYMENT_INTENT_URL: '/api/create-payment-intent' // <-- endpoint backend qui renvoie {clientSecret}
 };
 
 const FIREBASE_CFG = {
